[workspace]
members = [
"zomes/chess",
"zomes/profiles",
"zomes/invitations",
"zomes/joining_code",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hdk = {git = "https://github.com/holochain/holochain", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "hdk"}
holo_hash = {git = "https://github.com/holochain/holochain.git", rev = "363af6d8af8d18e4616f6aa56ad4d1f0fabaafb7", package = "holo_hash"}
