[package]
authors = ["manuel_puentes"]
edition = "2018"
name = "hc_zome_chess"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_chess"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hdk =  {version = "0.0.120", features = ["encoding"]}

chess = "3.2.0"
hc_mixin_elo = {git = "http://github.com/eyss/elo", rev = "96e940f1fe64602541c7be705ad7485ce5754545"}
hc_mixin_turn_based_game = {git = "http://github.com/eyss/turn-based-game", rev = "f7664cc4cd9f1cd899725f17ef25f1548fd16ffe"}
