[package]
authors = ["manuel_puentes","Thomas_cal"]
edition = "2018"
name = "hc_zome_chess"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_chess"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"

hdk =  {version = "0.0.126", features = ["encoding"]}

chess = "3.2.0"
hc_mixin_elo = {git = "http://github.com/eyss/elo", rev = "for-hdk-v0.0.126"}
hc_mixin_turn_based_game = {git = "http://github.com/eyss/turn-based-game", rev = "for-hdk-v0.0.126"}
