[package]
authors = ["manuel_puentes"]
edition = "2018"
name = "invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations"

[dependencies]
hc_zome_invitations = {git = "https://github.com/eyss/hc_zome_invitations", rev = "811c072bca4200b023e225899d01e2ae93096eaa", package = "hc_zome_invitations"}
