[package]
authors = ["manuel_puentes"]
edition = "2018"
name = "invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations"

[dependencies]
hc_zome_invitations = {git = "https://github.com/eyss/invitations", rev = "for-hdk-v0.0.126p1", package = "hc_zome_invitations"}
