[package]
name = "profiles"
version = "0.0.1"
authors = [ "guillem_cordoba" ]
edition = "2018"

[lib]
name = "profiles"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", package = "hc_zome_profiles", rev = "12f14e63813bd534807df24108d8dbc4b3390785"}
