[package]
name = "profiles"
version = "0.0.1"
authors = [ "guillem_cordoba" ]
edition = "2018"

[lib]
name = "profiles"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", branch = "for-hdk-v0.0.126", package = "hc_zome_profiles"}
